--- a/finn.ipynb
+++ b/finn.ipynb
@@ -159,11 +159,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "005f2811-3e64-472b-80f4-3a77ba9cba9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Troms & Finnmark Global Land Cover area\n",
+    "GLC_AOI_min_lon = GLC_AOI.lon.min()\n",
+    "GLC_AOI_max_lon = GLC_AOI.lon.max()\n",
+    "GLC_AOI_min_lat = GLC_AOI.lat.min()\n",
+    "GLC_AOI_max_lat = GLC_AOI.lat.max()\n",
+    "print(GLC_AOI_min_lon, GLC_AOI_max_lon, GLC_AOI_min_lat, GLC_AOI_max_lat)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "916ebb4c-4f1b-460e-8b9e-163c51c0c4d1",
    "metadata": {},
    "source": [
-    "### The two cells below redefine a very small region for testing purposes only - skip them to keep the whole Troms-finnmark area"
+    "### The cell below redefine a very small region for testing purposes only - skip them to keep the whole Troms-finnmark area"
    ]
   },
   {
@@ -174,30 +189,73 @@
    "outputs": [],
    "source": [
     "# Small region \n",
-    "AOI_min_lon = 19.6\n",
-    "AOI_max_lon = 19.7\n",
-    "AOI_min_lat = 69\n",
-    "AOI_max_lat = 69.1"
+    "Small_AOI_min_lon = 19.6\n",
+    "Small_AOI_max_lon = 19.7\n",
+    "Small_AOI_min_lat = 69\n",
+    "Small_AOI_max_lat = 69.1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cc0cad9-131c-4ef9-8a34-57d1e0098c24",
+   "id": "57b981b2-9d3b-4205-86b3-c9ad93e44de5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GLC_AOI = GLC_AOI.sel(lat=slice(AOI_max_lat, AOI_min_lat), lon=slice(AOI_min_lon, AOI_max_lon))"
+    "from h3 import h3\n",
+    "import folium\n",
+    "\n",
+    "def visualize_hexagons(hexagons, color=\"red\", folium_map=None):\n",
+    "    \"\"\"\n",
+    "    hexagons is a list of hexcluster. Each hexcluster is a list of hexagons. \n",
+    "    eg. [[hex1, hex2], [hex3, hex4]]\n",
+    "    \"\"\"\n",
+    "    polylines = []\n",
+    "    lat = []\n",
+    "    lng = []\n",
+    "    for hex in hexagons:\n",
+    "        polygons = h3.h3_set_to_multi_polygon([hex], geo_json=False)\n",
+    "        # flatten polygons into loops.\n",
+    "        outlines = [loop for polygon in polygons for loop in polygon]\n",
+    "        polyline = [outline + [outline[0]] for outline in outlines][0]\n",
+    "        lat.extend(map(lambda v:v[0],polyline))\n",
+    "        lng.extend(map(lambda v:v[1],polyline))\n",
+    "        polylines.append(polyline)\n",
+    "    \n",
+    "    if folium_map is None:\n",
+    "        m = folium.Map(location=[sum(lat)/len(lat), sum(lng)/len(lng)], zoom_start=13, tiles='cartodbpositron')\n",
+    "    else:\n",
+    "        m = folium_map\n",
+    "    for polyline in polylines:\n",
+    "        my_PolyLine=folium.PolyLine(locations=polyline,weight=8,color=color)\n",
+    "        m.add_child(my_PolyLine)\n",
+    "    return m\n",
+    "    \n",
+    "\n",
+    "def visualize_polygon(polyline, color):\n",
+    "    polyline.append(polyline[0])\n",
+    "    lat = [p[0] for p in polyline]\n",
+    "    lng = [p[1] for p in polyline]\n",
+    "    m = folium.Map(location=[sum(lat)/len(lat), sum(lng)/len(lng)], zoom_start=13, tiles='cartodbpositron')\n",
+    "    my_PolyLine=folium.PolyLine(locations=polyline,weight=8,color=color)\n",
+    "    m.add_child(my_PolyLine)\n",
+    "    return m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b378f20e-cad3-46cb-990d-069febbf1f57",
+   "id": "29f232b9-b84e-4d6c-b8b6-2650652ad857",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GLC_AOI"
+    "Small_AOI_center = h3.geo_to_h3((Small_AOI_min_lat + Small_AOI_max_lat)/2, (Small_AOI_min_lon +Small_AOI_max_lon)/2, 9) # lat, lng, hex resolution    \n",
+    "m = visualize_hexagons([h3.geo_to_h3(GLC_AOI_min_lat, GLC_AOI_min_lon, 9)], color=\"red\")                                                                                        \n",
+    "m = visualize_hexagons([h3.geo_to_h3(GLC_AOI_max_lat, GLC_AOI_min_lon, 9)], color=\"red\", folium_map=m)                                                                                   \n",
+    "m = visualize_hexagons([h3.geo_to_h3(GLC_AOI_max_lat, GLC_AOI_max_lon, 9)], color=\"red\", folium_map=m)                                                                                \n",
+    "m = visualize_hexagons([h3.geo_to_h3(GLC_AOI_min_lat, GLC_AOI_max_lon, 9)], color=\"red\", folium_map=m)\n",
+    "m = visualize_hexagons([Small_AOI_center], color=\"green\", folium_map=m) \n",
+    "display(m)"
    ]
   },
   {
@@ -356,17 +414,8 @@
    "outputs": [],
    "source": [
     "# Find the correspondind ERA5-land lat-lon\n",
-    "ERA_lon = ((dv.lon - 15.59) / 0.1).astype('int')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f85c4d9f-7ff1-44b9-bc7f-071ef7887366",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ERA_lon"
+    "ERA5_lon = ((dv.lon - 15.59) / 0.1).astype('int').values\n",
+    "ERA5_lat = ((dv.lat - 68.35) / 0.1).astype('int').values"
    ]
   },
   {
@@ -376,77 +425,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ERA_lat = ((dv.lat - 68.35) / 0.1).astype('int')"
+    "dv['ERA5_lon_index'] = ERA5_lon\n",
+    "dv['ERA5_lat_index'] = ERA5_lat"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3af78bab-3742-4aa4-92d2-1034875c2561",
+   "id": "5463849e-45a8-4bc9-85af-53aa68f32892",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ERA_lat.apply"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57b981b2-9d3b-4205-86b3-c9ad93e44de5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h3 import h3\n",
-    "import folium\n",
-    "\n",
-    "def visualize_hexagons(hexagons, color=\"red\", folium_map=None):\n",
-    "    \"\"\"\n",
-    "    hexagons is a list of hexcluster. Each hexcluster is a list of hexagons. \n",
-    "    eg. [[hex1, hex2], [hex3, hex4]]\n",
-    "    \"\"\"\n",
-    "    polylines = []\n",
-    "    lat = []\n",
-    "    lng = []\n",
-    "    for hex in hexagons:\n",
-    "        polygons = h3.h3_set_to_multi_polygon([hex], geo_json=False)\n",
-    "        # flatten polygons into loops.\n",
-    "        outlines = [loop for polygon in polygons for loop in polygon]\n",
-    "        polyline = [outline + [outline[0]] for outline in outlines][0]\n",
-    "        lat.extend(map(lambda v:v[0],polyline))\n",
-    "        lng.extend(map(lambda v:v[1],polyline))\n",
-    "        polylines.append(polyline)\n",
-    "    \n",
-    "    if folium_map is None:\n",
-    "        m = folium.Map(location=[sum(lat)/len(lat), sum(lng)/len(lng)], zoom_start=13, tiles='cartodbpositron')\n",
-    "    else:\n",
-    "        m = folium_map\n",
-    "    for polyline in polylines:\n",
-    "        my_PolyLine=folium.PolyLine(locations=polyline,weight=8,color=color)\n",
-    "        m.add_child(my_PolyLine)\n",
-    "    return m\n",
-    "    \n",
-    "\n",
-    "def visualize_polygon(polyline, color):\n",
-    "    polyline.append(polyline[0])\n",
-    "    lat = [p[0] for p in polyline]\n",
-    "    lng = [p[1] for p in polyline]\n",
-    "    m = folium.Map(location=[sum(lat)/len(lat), sum(lng)/len(lng)], zoom_start=13, tiles='cartodbpositron')\n",
-    "    my_PolyLine=folium.PolyLine(locations=polyline,weight=8,color=color)\n",
-    "    m.add_child(my_PolyLine)\n",
-    "    return m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29f232b9-b84e-4d6c-b8b6-2650652ad857",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h3_address = h3.geo_to_h3(69.05, 19.6, 9) # lat, lng, hex resolution                                                                                                        \n",
-    "m = visualize_hexagons([h3.geo_to_h3(69.05, 19.6, 9)], color=\"red\")\n",
-    "display(m)\n",
-    "h3_address"
+    "dv"
    ]
   },
   {
@@ -489,15 +479,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f64038a-aa03-48c0-8bf0-3855b233df1e",
+   "metadata": {},
+   "source": [
+    "# Adding columns with the ERA5-land longitude and latitude to dv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40178080-7c9d-40fb-92f3-f36cf67555d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv['ERA5_lon'] = ERA5land.longitude[dv['ERA5_lon_index'].values].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44b32f35-d012-48f9-9335-724911c61d17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv['ERA5_lat'] = ERA5land.latitude[dv['ERA5_lat_index'].values].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e3cdc32-3226-40cc-871e-557d37134d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "22c5a8f6-a593-40da-8249-eb2c74f7706d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Year 2015 - first 6 months\n",
+    "# Year 2015 - first 20 days\n",
     "import pandas as pd\n",
-    "saison = pd.date_range(\"2015-01-01\", periods=24000, freq=\"1H\")"
+    "saison = pd.date_range(\"2015-01-01\", periods=20*24, freq=\"1H\")"
    ]
   },
   {
@@ -517,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg = ERA5land.sel(time = saison).isel(latitude=6).isel(longitude=40).to_dataframe()"
+    "dg = ERA5land.sel(time = saison).to_dataframe()"
    ]
   },
   {
@@ -537,7 +565,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg.sd.min()"
+    "dg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e71a7c-ad4e-4eb3-96c1-9b969d40e23e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv"
    ]
   },
   {
@@ -545,23 +583,13 @@
    "id": "0cef9794-ef9d-41be-9a7f-a762859acea6",
    "metadata": {},
    "source": [
-    "# Merge Global Land Cover and ERA5-land data"
+    "# Merge into dv columns related ERA5-land data (for a predefined period of time) to each lichen location"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbebe30c-aaff-425c-8c98-96066ffdb98c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df('ERA5-land') dg "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "885de42c-20b3-4ee3-8f87-9f11f39fae41",
+   "id": "0838a1fa-dfed-4db4-b271-bb8ca1dbd956",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -569,7 +597,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0838a1fa-dfed-4db4-b271-bb8ca1dbd956",
+   "id": "fdbc35e3-2f95-4e8b-8153-6bff07cefa35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d23efd70-5ca1-4c0b-8f91-da9e7c143c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a000643e-7c16-4dfe-9126-7f9a0003f10e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4455030-6680-46f7-996a-de5d747cdb69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7e0f68b-67c9-4cce-a1c5-158cb948b581",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a6e27b-dd53-43c3-9266-0f773faa36c7",
    "metadata": {},
    "outputs": [],
    "source": []
