--- a/finn.ipynb
+++ b/finn.ipynb
@@ -519,13 +519,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d4e02355-4415-4ab4-8416-8c38f1130737",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv['ERA5_index'] = (dv['ERA5_lon'] * 100).astype('int') + ((dv['ERA5_lat'] * 100).astype('int') / 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b88c87-0bcd-42c2-92a4-738985751bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "22c5a8f6-a593-40da-8249-eb2c74f7706d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Year 2015 - first 20 days\n",
+    "# Year 2015 - first 10 days\n",
     "import pandas as pd\n",
-    "saison = pd.date_range(\"2015-01-01\", periods=20*24, freq=\"1H\")"
+    "saison = pd.date_range(\"2015-01-01\", periods=10*24, freq=\"1H\")"
    ]
   },
   {
@@ -571,7 +591,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e71a7c-ad4e-4eb3-96c1-9b969d40e23e",
+   "id": "0616c8ef-c135-4c2f-82d6-30a9f74ae5f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dg['ERA5_index'] = (dg['longitude'] * 100).astype('int') + ((dg['latitude'] * 100).astype('int') / 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86559349-9640-424d-83b6-6af7a2c287f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c848e920-f102-4fc2-9a57-cfc212d90acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw = vaex.from_pandas(dg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a6c10d-2ba1-4617-9721-944a62e4eb6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw = dw.drop('longitude').drop('latitude').drop('time')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd61b534-0043-44a3-a6b3-3c76a8fbbfac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbc35e3-2f95-4e8b-8153-6bff07cefa35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv = dv.drop('ERA5_lon_index').drop('ERA5_lat_index').drop('ERA5_lon').drop('ERA5_lat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4ba529a-12a3-471f-b266-dfa613cac216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,20 +667,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0838a1fa-dfed-4db4-b271-bb8ca1dbd956",
+   "cell_type": "markdown",
+   "id": "b9f24f94-6d8f-45cf-a5fe-35c31fce78e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdbc35e3-2f95-4e8b-8153-6bff07cefa35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## That is not right"
+   ]
   },
   {
    "cell_type": "code",
@@ -608,7 +680,9 @@
    "id": "d23efd70-5ca1-4c0b-8f91-da9e7c143c8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dv.join(dw, left_on='ERA5_index', right_on='ERA5_index', allow_duplication=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -616,7 +690,9 @@
    "id": "a000643e-7c16-4dfe-9126-7f9a0003f10e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dw.groupby(by='ERA5_index')"
+   ]
   },
   {
    "cell_type": "code",
