Tried with dw.func.where(dw['ERA5_index'] == 3098.6834, dw['t2m'], None)

--- a/finn.ipynb
+++ b/finn.ipynb
@@ -414,8 +414,9 @@
    "outputs": [],
    "source": [
     "# Find the correspondind ERA5-land lat-lon\n",
+    "# Careful with the latitude, in reverse order\n",
     "ERA5_lon = ((dv.lon - 15.59) / 0.1).astype('int').values\n",
-    "ERA5_lat = ((dv.lat - 68.35) / 0.1).astype('int').values"
+    "ERA5_lat = 28 - ((dv.lat - 68.35) / 0.1).astype('int').values"
    ]
   },
   {
@@ -664,6 +665,60 @@
    "metadata": {},
    "source": [
     "# Merge into dv columns related ERA5-land data (for a predefined period of time) to each lichen location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5b4be1-230d-400c-be9c-5a944a2d71f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw.func.where(dw['ERA5_index'] == 3098.6834, dw['t2m'], None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a84ddc-6804-4518-b2dc-30738b28aded",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d24277a5-9892-414b-be6b-f4170ff580ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c0a7d00-d1b0-4e91-819f-48f255fcbe9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "478f3094-2add-49c9-8190-071380495699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw_filtered = dw[(dw.ERA5_index == '1559.7115')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb002980-f889-493e-a971-46daeb5175b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dw_filtered"
    ]
   },
   {
