--- a/deep_mean.ipynb
+++ b/deep_mean.ipynb
@@ -47,15 +47,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading  /home/jovyan/Arctic/Vegetation_in_Troms_and_Finnmark/data/input_mean_tp.csv\n",
+      "Reading  /home/jovyan/Arctic/Vegetation_in_Troms_and_Finnmark/data/input_mean_tp2.csv\n",
       "Read\n",
       "Input\n",
-      "Number of rows: 2,745\n",
+      "Number of rows: 3,842\n",
       "Number of columns: 8785\n",
-      "Reading  /home/jovyan/Arctic/Vegetation_in_Troms_and_Finnmark/data/output_mean_tp.csv\n",
+      "Reading  /home/jovyan/Arctic/Vegetation_in_Troms_and_Finnmark/data/output_mean_tp2.csv\n",
       "Read\n",
       "Output\n",
-      "Number of rows: 2,745\n",
+      "Number of rows: 3,842\n",
       "Number of columns: 1\n"
      ]
     }
@@ -63,7 +63,7 @@
    "source": [
     "# Reading local .csv files\n",
     "path = '/home/jovyan/Arctic/Vegetation_in_Troms_and_Finnmark/data/'\n",
-    "input_file = os.path.join(path, 'input_mean_tp.csv')\n",
+    "input_file = os.path.join(path, 'input_mean_tp2.csv')\n",
     "print('Reading ', input_file)\n",
     "input = pd.read_csv(input_file)\n",
     "print('Read')\n",
@@ -72,7 +72,7 @@
     "print(f'Number of rows: {input.shape[0]:,}')\n",
     "print(f'Number of columns: {input.shape[1]}')\n",
     "\n",
-    "output_file = os.path.join(path, 'output_mean_tp.csv')\n",
+    "output_file = os.path.join(path, 'output_mean_tp2.csv')\n",
     "print('Reading ', output_file)\n",
     "output = pd.read_csv(output_file)\n",
     "print('Read')\n",
@@ -113,22 +113,22 @@
    "source": [
     "print('X_train')\n",
     "X_train\n",
-    "X_train_file = os.path.join(path, 'X_mean_tp_train.hdf')\n",
+    "X_train_file = os.path.join(path, 'X_mean_tp2_train.hdf')\n",
     "X_train.to_hdf(X_train_file, key='df', mode=\"w\", index=False)\n",
     "\n",
     "print('X_test')\n",
     "X_test\n",
-    "X_test_file = os.path.join(path, 'X_mean_tp_test.hdf')\n",
+    "X_test_file = os.path.join(path, 'X_mean_tp2_test.hdf')\n",
     "X_test.to_hdf(X_test_file, key='df', mode=\"w\",  index=False)\n",
     "\n",
     "print('y_train')\n",
     "y_train\n",
-    "y_train_file = os.path.join(path, 'y_mean_tp_train.hdf')\n",
+    "y_train_file = os.path.join(path, 'y_mean_tp2_train.hdf')\n",
     "y_train.to_hdf(y_train_file, key='dg', mode=\"w\", index=False)\n",
     "\n",
     "print('y_test')\n",
     "y_test \n",
-    "y_test_file = os.path.join(path, 'y_mean_tp_test.hdf')\n",
+    "y_test_file = os.path.join(path, 'y_mean_tp2_test.hdf')\n",
     "y_test.to_hdf(y_test_file, key='dg', mode=\"w\", index=False)"
    ]
   },
