--- a/train_mean.ipynb
+++ b/train_mean.ipynb
@@ -610,7 +610,7 @@
     }
    ],
    "source": [
-    "# Forecast vs. actual Values linear-plot\n",
+    "# Forecast vs. actual Values linear-plot - Unseen data\n",
     "\n",
     "fig = plt.figure(figsize=(100, 5))\n",
     "ax = fig.add_subplot(111)\n",
