Run with 4xArm CPUs & 24GB RAM (no Vaex, sklearn bug fix, etc.)

--- a/deep_mean_tp1n.ipynb
+++ b/deep_mean_tp1n.ipynb
@@ -2,21 +2,61 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23454476",
+   "id": "5959ebbc",
    "metadata": {},
    "source": [
     "# Forecasting moss & lichen fractional cover mean\n",
     "## with a Neural Network using Keras\n",
     "## (Reading input and output files stored locally as .csv)\n",
     "## (Writing X_train, X_test, y_train, y_test locally as .csv too)\n",
-    "#\n",
     "# For lichen output only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08695281",
+   "metadata": {},
+   "source": [
+    "### This notebook uses TensorFlow NGC Container Release 23.03-tf2-py3\n",
+    "### (https://catalog.ngc.nvidia.com/orgs/nvidia/containers/tensorflow)\n",
+    "### and runs on a machine with 4x ARM CPUs (Neoverse N1) and 24GB RAM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0b5dc13b",
+   "id": "31c72519",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8fcc4af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# There is known issue affects aarch64 libgomp, which might sometimes cause \n",
+    "# \"Cannot allocate memory in static TLS block errors.\"\"\n",
+    "# The workaround is to run the following command: \n",
+    "%env LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "75781790",
    "metadata": {
     "tags": []
    },
@@ -32,17 +72,17 @@
    ],
    "source": [
     "print('Starting imports')\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "print('Finished imports')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1f23e469",
+   "execution_count": 4,
+   "id": "e6343d87",
    "metadata": {
     "tags": []
    },
@@ -51,12 +91,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading  /home/ubuntu/data/input_mean_tp1.csv\n",
+      "Reading  /home/jeani/data/input_mean_tp1.csv\n",
       "Read\n",
       "Input\n",
       "Number of rows: 3,403\n",
       "Number of columns: 17522\n",
-      "Reading  /home/ubuntu/data/output_mean_tp1.csv\n",
+      "Reading  /home/jeani/data/output_mean_tp1.csv\n",
       "Read\n",
       "Output\n",
       "Number of rows: 3,403\n",
@@ -66,7 +106,7 @@
    ],
    "source": [
     "# Reading local .csv files\n",
-    "path = '/home/ubuntu/data/'\n",
+    "path = '/home/jeani/data/'\n",
     "input_file = os.path.join(path, 'input_mean_tp1.csv')\n",
     "print('Reading ', input_file)\n",
     "input = pd.read_csv(input_file)\n",
@@ -79,6 +119,7 @@
     "output_file = os.path.join(path, 'output_mean_tp1.csv')\n",
     "print('Reading ', output_file)\n",
     "output = pd.read_csv(output_file)\n",
+    "output = output.drop(columns=['index'])\n",
     "print('Read')\n",
     "\n",
     "print('Output')\n",
@@ -88,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1f248863",
+   "execution_count": 5,
+   "id": "be1fb314",
    "metadata": {
     "tags": []
    },
@@ -101,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "df3f7634",
+   "execution_count": 6,
+   "id": "19d2bb1e",
    "metadata": {
     "tags": []
    },
@@ -142,8 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9d796318",
+   "execution_count": 7,
+   "id": "afd73a13",
    "metadata": {
     "tags": []
    },
@@ -152,44 +193,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Lichen_mean     N     t2m_0     t2m_1     t2m_2     t2m_3     t2m_4  \\\n",
-      "989      0.032000   326  0.974211  0.974451  0.975101  0.975740  0.977355   \n",
-      "686      0.010000    31  0.992161  0.992359  0.992246  0.991846  0.991323   \n",
-      "472      0.010000   309  0.992437  0.992459  0.992048  0.991194  0.989978   \n",
-      "3231     0.100741    98  0.963044  0.962715  0.962194  0.961530  0.960738   \n",
-      "3351     0.032615   166  0.973368  0.973146  0.972325  0.970736  0.968560   \n",
-      "...           ...   ...       ...       ...       ...       ...       ...   \n",
-      "3268     0.095000     4  0.972667  0.972234  0.971994  0.970967  0.969105   \n",
-      "1559     0.236456    79  0.996371  0.995556  0.995155  0.994225  0.993548   \n",
-      "547      0.157437    30  0.981318  0.981702  0.982099  0.981726  0.980339   \n",
-      "3251     0.146433  1082  0.970849  0.970481  0.970111  0.969627  0.968424   \n",
-      "228      0.020000     1  0.994387  0.994085  0.993521  0.993071  0.992228   \n",
+      "        Lichen    N     t2m_0     t2m_1     t2m_2     t2m_3     t2m_4  \\\n",
+      "989   0.024091  132  0.971087  0.971371  0.970914  0.968853  0.967404   \n",
+      "686   0.295000    8  0.993326  0.992581  0.991884  0.991502  0.990914   \n",
+      "472   0.175429   35  0.994245  0.994045  0.993928  0.993348  0.992681   \n",
+      "3231  0.152985   67  0.960703  0.961761  0.962833  0.966086  0.972278   \n",
+      "3351  0.220000   88  0.970532  0.973323  0.976747  0.979609  0.981333   \n",
+      "...        ...  ...       ...       ...       ...       ...       ...   \n",
+      "3268  0.042000    5  0.964211  0.965566  0.966683  0.967295  0.969660   \n",
+      "1559  0.040000    2  0.983213  0.981717  0.980603  0.979911  0.979536   \n",
+      "547   0.120000    3  0.996146  0.995740  0.995268  0.994531  0.993795   \n",
+      "3251  0.248549  455  0.964745  0.966638  0.968546  0.970838  0.975005   \n",
+      "228   0.149043  188  0.994862  0.993952  0.993521  0.993340  0.993717   \n",
       "\n",
       "         t2m_5     t2m_6     t2m_7  ...   tp_8750   tp_8751   tp_8752  \\\n",
-      "989   0.979640  0.980584  0.982842  ...  1.299115  1.299559  1.299780   \n",
-      "686   0.990448  0.989199  0.989388  ...  3.111004  3.118098  3.122533   \n",
-      "472   0.988547  0.987202  0.987335  ...  3.150466  3.158446  3.160442   \n",
-      "3231  0.961544  0.964333  0.974477  ...  0.188216  0.209055  0.223465   \n",
-      "3351  0.966793  0.965049  0.967856  ...  0.021060  0.026159  0.029485   \n",
+      "989   0.965331  0.967756  0.972545  ...  0.101313  0.101313  0.101313   \n",
+      "686   0.990766  0.989501  0.988838  ...  0.945295  1.644955  2.214925   \n",
+      "472   0.991627  0.990242  0.989414  ...  3.992452  4.201286  4.257374   \n",
+      "3231  0.977282  0.978784  0.978371  ...  0.818044  1.002491  1.090947   \n",
+      "3351  0.983972  0.984513  0.982545  ...  0.857726  1.061018  1.184944   \n",
       "...        ...       ...       ...  ...       ...       ...       ...   \n",
-      "3268  0.968422  0.968509  0.973758  ...  0.141883  0.145651  0.148090   \n",
-      "1559  0.992696  0.992037  0.991787  ...  0.358697  0.358919  0.359806   \n",
-      "547   0.979487  0.979776  0.981655  ...  7.494743  7.870512  8.055181   \n",
-      "3251  0.967415  0.967137  0.970206  ...  2.124475  2.300720  2.508224   \n",
-      "228   0.991307  0.989486  0.988159  ...  3.082406  3.866753  4.091548   \n",
+      "3268  0.973490  0.977002  0.981595  ...  0.335198  0.342292  0.352047   \n",
+      "1559  0.979698  0.979805  0.977779  ...  0.125256  0.125921  0.127029   \n",
+      "547   0.992565  0.990657  0.989348  ...  3.844140  4.220573  4.289519   \n",
+      "3251  0.979248  0.980830  0.980757  ...  0.685693  0.799643  0.870585   \n",
+      "228   0.993590  0.993406  0.994300  ...  4.066719  4.166480  4.221017   \n",
       "\n",
       "       tp_8753   tp_8754   tp_8755   tp_8756   tp_8757   tp_8758   tp_8759  \n",
-      "989   1.300002  1.300002  1.300224  1.300224  1.300224  1.300224  1.300446  \n",
-      "686   3.123198  3.123198  3.123419  3.123863  3.125414  3.129627  3.136721  \n",
-      "472   3.160442  3.160442  3.160442  3.160442  3.160664  3.161328  3.163545  \n",
-      "3231  0.236102  0.248517  0.258936  0.282879  0.306600  0.324335  0.337193  \n",
-      "3351  0.032810  0.035249  0.037244  0.039461  0.041456  0.043229  0.044338  \n",
+      "989   0.101534  0.101978  0.102421  0.103086  0.103530  0.104639  0.106412  \n",
+      "686   2.501795  2.706195  2.956042  3.250005  3.499188  3.708908  3.933926  \n",
+      "472   4.275997  4.279986  4.301712  4.309250  4.316344  4.325655  4.340731  \n",
+      "3231  1.155902  1.170090  1.188713  1.216646  1.264753  1.313968  1.339241  \n",
+      "3351  1.297120  1.355425  1.378702  1.389565  1.402424  1.421046  1.440111  \n",
       "...        ...       ...       ...       ...       ...       ...       ...  \n",
-      "3268  0.149420  0.150528  0.150972  0.152302  0.154297  0.158066  0.160504  \n",
-      "1559  0.360028  0.360693  0.360914  0.361358  0.362245  0.363131  0.364018  \n",
-      "547   8.210588  8.402129  8.491693  8.574605  8.635127  8.688777  8.742869  \n",
-      "3251  2.736788  2.994394  3.139603  3.249119  3.405855  3.487437  3.641514  \n",
-      "228   4.158056  4.180004  4.322773  4.389281  4.424752  4.439162  4.450912  \n",
+      "3268  0.362910  0.370890  0.375324  0.377763  0.381975  0.386631  0.389513  \n",
+      "1559  0.127473  0.127694  0.128359  0.129024  0.130355  0.131685  0.134123  \n",
+      "547   4.307477  4.312797  4.350041  4.354032  4.354697  4.355140  4.356470  \n",
+      "3251  0.927559  0.939087  0.949507  0.965247  0.992515  1.021557  1.039514  \n",
+      "228   4.236313  4.244738  4.253162  4.263360  4.281982  4.309472  4.329424  \n",
       "\n",
       "[681 rows x 17522 columns]\n"
      ]
@@ -201,8 +242,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8059abdc",
+   "execution_count": 8,
+   "id": "bd1cd5df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      new_Lichen  new_N\n",
+      "989     0.079881  253.0\n",
+      "686     0.092609   46.0\n",
+      "472     0.043143  140.0\n",
+      "3231    0.082727   55.0\n",
+      "3351    0.212667  165.0\n",
+      "...          ...    ...\n",
+      "3268    0.053333   12.0\n",
+      "1559    0.030000    2.0\n",
+      "547          NaN    NaN\n",
+      "3251    0.106951   82.0\n",
+      "228     0.067881  335.0\n",
+      "\n",
+      "[681 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "404aa795",
    "metadata": {
     "tags": []
    },
@@ -222,7 +294,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6342744b",
+   "id": "e6cb6d53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "057a983d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
